fix spacing in header

--- a/src/assets/styles/components/_intro.scss
+++ b/src/assets/styles/components/_intro.scss
@@ -1,16 +1,16 @@
 .intro {
     &__main {
-        padding-top: 294px;
-        padding-bottom: 200px;
+        padding-top: 214px;
+        padding-bottom: 120px;
 
         @include mq-down(lg) {
-            padding-top: 222px;
-            padding-bottom: 144px;
+            padding-top: 198px;
+            padding-bottom: 120px;
         }
 
         @include mq-down(sm) {
-            padding-top: 194px;
-            padding-bottom: 116px;
+            padding-top: 178px;
+            padding-bottom: 100px;
         }
 
         .intro__heading {
